Fixing mobile whitespace issue

--- a/style.css
+++ b/style.css
@@ -94,7 +94,7 @@ h1, h2 {
 	.home {
 		margin-top: 20px;
 		margin-left: 30px;
-		width: 100%;
+		margin-right: 85%
 	}
 }
 
